--- a/style.css
+++ b/style.css
@@ -35,8 +35,8 @@ a {
 }
 
 .bg-1 {
-    background-color: #E8B2C4; /* baby pink bp */
-    color: #000000;
+    background-color: #000000; /* baby pink bp */
+    color: #E8B2C4;
 }
 
 .bg-2 {
