--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ a {
 }
 
 .bg-1 {
-    background-color: #000000; /* baby pink bp */
+    background-color: #E8B2C4; /* baby pink bp */
     color: #E8B2C4;
 }
 
@@ -55,7 +55,7 @@ a {
 
 .bg-3 {
     background-color: #fef7f6; /* Baby Pink */
-    color: #000000;
+    color: #fef7f6;
 }
 
 .bg-4 {
