--- a/style.css
+++ b/style.css
@@ -35,8 +35,8 @@ a {
 }
 
 .bg-1 {
-    background-color: #E8B2C4; /* baby pink bp */
-    color: #E8B2C4;
+    background-color: #ff94e0; /* baby pink bp */
+    color: #ff94e0;
 }
 
 .bg-2 {
@@ -54,8 +54,8 @@ a {
 }
 
 .bg-3 {
-    background-color: #fef7f6; /* Baby Pink */
-    color: #fef7f6;
+    background-color: #ecd8e3; /* Baby Pink */
+    color: #ecd8e3;
 }
 
 .bg-4 {
