--- a/style.css
+++ b/style.css
@@ -18,11 +18,12 @@ a {
 
 #logo, .project-img {
     max-height: 300px;
+    max-width: 300px;
 }
 
 #fork img{
-    height: 25px;
-    margin-bottom: 25px;
+    height: 30px;
+    margin-bottom: 30px;
     filter: invert(1);
 }
 
@@ -41,7 +42,7 @@ a {
 
 .bg-2 {
     background-color: #000000; /* Black */
-    color: #ffffff;
+    color: #ff76d8; /* baby pink color font*/
 }
 
 .card {
@@ -55,12 +56,12 @@ a {
 
 .bg-3 {
     background-color: #ecd8e3; /* Baby Pink */
-    color: #ecd8e3;
+    color: #000000; /* black color font*/
 }
 
 .bg-4 {
     background-color: #eff8fb; /* Baby Blue */
-    color: #fff;
+    color: #7ab1cf;/* blue color font*/
 }
 
 .container-fluid {
@@ -79,5 +80,5 @@ a {
 }
 
 .navbar-nav li a:hover {
-    color: #2e72a1 !important;
+    color: #92a8d1 !important;
 }
