fix about me color background

--- a/style.css
+++ b/style.css
@@ -54,8 +54,8 @@ a {
 }
 
 .bg-3 {
-    background-color: #000000; /* Black */
-    color: #ecd8e3; /* baby pink color font*/
+    background-color: #ecd8e3; /* pink */
+    color: #000000; /* black color font*/
 }
 
 .bg-4 {
