fix color for hstat logo

--- a/style.css
+++ b/style.css
@@ -59,8 +59,8 @@ a {
 }
 
 .bg-4 {
-    background-color: #7ab1cf; /* Baby Blue */
-    color: #000000;/* black color font*/
+    background-color: #fdb0aa; /* peach */
+    color: #fdb0aa;/* peach color font*/
 }
 
 .container-fluid {
