--- a/style.css
+++ b/style.css
@@ -35,8 +35,8 @@ a {
 }
 
 .bg-1 {
-    background-color: #ff94e0; /* baby pink bp */
-    color: #ff94e0;
+    background-color: #ffc3dc; /* baby pink bp */
+    color: #ffc3dc;
 }
 
 .bg-2 {
@@ -59,8 +59,8 @@ a {
 }
 
 .bg-4 {
-    background-color: #fdb0aa; /* peach */
-    color: #fdb0aa;/* peach color font*/
+    background-color: #f9d0d0; /* light peach */
+    color: #f9d0d0;/* light peach color font*/
 }
 
 .container-fluid {
