--- a/style.css
+++ b/style.css
@@ -36,13 +36,13 @@ a {
 }
 
 .bg-1 {
-    background-color: #ffc3dc; /* baby pink bp */
+    background-color: #AA9D94; /* baby pink bp */
     color: #ffc3dc;
 }
 
 .bg-2 {
-    background-color: #000000; /* Black */
-    color: #f7cac9; /* baby pink color font*/
+    background-color: #D2C1B3; /* Black */
+    color: #AA9D94; /* baby pink color font*/
 }
 
 .card {
