--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ a {
 
 .bg-2 {
     background-color: #E7D7CB; /* light beige */
-    color: #EBD2BC; /* light beige2 color font*/
+    color: #000000; /* black color font*/
 }
 
 .card {
