--- a/style.css
+++ b/style.css
@@ -60,8 +60,8 @@ a {
 }
 
 .bg-4 {
-    background-color: #f9d0d0; /* light peach */
-    color: #f9d0d0;/* light peach color font*/
+    background-color: #E7D7CB; /* light peach */
+    color: #000000;/* light peach color font*/
 }
 
 .container-fluid {
