--- a/style.css
+++ b/style.css
@@ -60,8 +60,8 @@ a {
 }
 
 .bg-4 {
-    background-color: #E7D7CB; /* light peach */
-    color: #000000;/* light peach color font*/
+    background-color: #D2C1B3; /* dark light beige */
+    color: #000000;/* black font*/
 }
 
 .container-fluid {
