--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ a {
 }
 
 .bg-3 {
-    background-color: #ecd8e3; /* pink */
+    background-color: #D2C1B3; /* pink */
     color: #000000; /* black color font*/
 }
 
