--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ a {
 
 .bg-1 {
     background-color: #F7EDE2; /* lighter beige */
-    color: #ffc3dc;
+    color: #000000;
 }
 
 .bg-2 {
@@ -55,12 +55,12 @@ a {
 }
 
 .bg-3 {
-    background-color: #D2C1B3; /* pink */
+    background-color: #D2C1B3; /* dark light beige */
     color: #000000; /* black color font*/
 }
 
 .bg-4 {
-    background-color: #D2C1B3; /* dark light beige */
+    background-color: #F7EDE2; /* lighter beige */
     color: #000000;/* black font*/
 }
 
