--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ a {
 
 .bg-1 {
     background-color: #F7EDE2; /* lighter beige */
-    color: #000000;
+    color: #000000; /* black color font*/
 }
 
 .bg-2 {
