--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ html, body {
 }
 
 body {
-    font: 20px Montserrat, sans-serif;
-    line-height: 1.8;
+    font: 20px Kalam, Hepta Slab;
+    line-height: 1.5;
     color: #f5f6f7;
 }
 
